Fixed alignment issue with the vote icon - #14
The `vote` icon was changed to a heart in a previous commit. It makes it more clear whether something is voted or not. It now is styled to align the vote count with the heart.

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -138,6 +138,10 @@ $photo-element-border-clr: darken($primary-clr, 10%);
         margin: 2px 15px;
         color: $photo-element-text-clr;
 
+        i {
+          vertical-align: middle;
+        }
+
         .photo-element-vote-container {
           display: inline-block;
           margin-right: 20px;
@@ -145,11 +149,12 @@ $photo-element-border-clr: darken($primary-clr, 10%);
           .photo-element-vote-icon-container {
               margin-right: 20px;
               font-size: $photo-element-text-size + 20px;
+              line-height: $photo-element-text-size + 15px;
 
               .photo-element-vote-count {
                 margin-left: 10px;
                 font-size: $photo-element-text-size + 10px;
-                line-height: $photo-element-text-size + 10px;
+                line-height: $photo-element-text-size + 15px;
               }
           }
 
